--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,4 +70,5 @@ set (CS225A_BINARY_DIR                  ${PROJECT_SOURCE_DIR}/bin)
 
 add_subdirectory(lecture2-demo)
 add_subdirectory(hw0)
+add_subdirectory(hw1)
 # add_subdirectory(hw0_solution)
