--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,3 +73,5 @@ add_subdirectory(hw0)
 # add_subdirectory(hw0_solution)
 add_subdirectory(hw1)
 # add_subdirectory(hw1_solution)
+add_subdirectory(hw2)
+# add_subdirectory(hw2_solution)
