added hw3 skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,3 +75,4 @@ add_subdirectory(hw1)
 add_subdirectory(hw1_solution)
 add_subdirectory(hw2)
 # add_subdirectory(hw2_solution)
+add_subdirectory(hw3)
